make the canvas a square. Limit the height to 90vh.

--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
                 margin: 10pt;
                 background: #000;
                 box-shadow: 0 0 10px #429;
+                max-height: 90vh;
             }
         </style>
     </head>
     <body>
-        <canvas id="canvas" width="800" height="600"></canvas>
+        <canvas id="canvas" width="800" height="800"></canvas>
         <script>
             var parameters = {
                 particleLimit: 256, // Keep this in sync with particleLimit in vertex shader!
