don't use up 100% height (this avoids scrolling on mobile)

--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
         <meta charset="utf-8">
         <title>Morphogen</title>
         <style type="text/css">
+            html {
+                background-color: black;
+            }
             body {
                 background: radial-gradient(circle at top, #336, #000 75%);
-                min-height: 100vh;
+                background-repeat: no-repeat;
                 padding: 0 1em;
                 margin: 0;
                 text-align: center;
