flip pointer Y coordinate (it was inverted)

--- a/index.html
+++ b/index.html
@@ -126,12 +126,12 @@
                 gl.canvas.addEventListener('pointermove', function(e) {
                     const rect = canvas.getBoundingClientRect();
                     param.mouseX = (e.clientX - rect.left) / gl.canvas.clientWidth * 2 - 1;
-                    param.mouseY = (e.clientY - rect.top) / gl.canvas.clientHeight * 2 - 1;
+                    param.mouseY = ((e.clientY - rect.top) / gl.canvas.clientHeight * 2 - 1) * -1;
                 });
                 gl.canvas.addEventListener('pointerdown', function(e) {
                     const rect = canvas.getBoundingClientRect();
                     param.mouseX = (e.clientX - rect.left) / gl.canvas.clientWidth * 2 - 1;
-                    param.mouseY = (e.clientY - rect.top) / gl.canvas.clientHeight * 2 - 1;
+                    param.mouseY = ((e.clientY - rect.top) / gl.canvas.clientHeight * 2 - 1) * -1;
                     if (e.button == 0) {
                         param.mouseDown = true;
                         gl.canvas.setPointerCapture(e.pointerId);
@@ -140,7 +140,7 @@
                 gl.canvas.addEventListener('pointerup', function(e) {
                     const rect = canvas.getBoundingClientRect();
                     param.mouseX = (e.clientX - rect.left) / gl.canvas.clientWidth * 2 - 1;
-                    param.mouseY = (e.clientY - rect.top) / gl.canvas.clientHeight * 2 - 1;
+                    param.mouseY = ((e.clientY - rect.top) / gl.canvas.clientHeight * 2 - 1) * -1;
                     if (e.button == 0) {
                         param.mouseDown = false;
                         gl.canvas.releasePointerCapture(e.pointerId);
