--- a/index.html
+++ b/index.html
@@ -4,26 +4,23 @@
         <meta charset="utf-8">
         <title>Morphogen</title>
         <style type="text/css">
-            html {
-                background-color: black;
-            }
             body {
-                background: radial-gradient(circle at top, #336, #000 75%);
-                background-repeat: no-repeat;
-                padding: 0 1em;
+                background: black;
+                padding: 0;
                 margin: 0;
-                text-align: center;
             }
             #canvas {
-                margin: 10pt;
-                background: #000;
-                box-shadow: 0 0 10px #429;
-                max-height: 90vh;
+                display: block;
+                background: black;
+                margin: 0;
+                padding: 0;
+                height: 100vh;
+                width: 100vw;
             }
         </style>
     </head>
     <body>
-        <canvas id="canvas" width="800" height="800"></canvas>
+        <canvas id="canvas"></canvas>
         <script>
             var parameters = {
                 particleLimit: 256, // Keep this in sync with particleLimit in vertex shader!
