--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
         <meta charset="utf-8">
         <title>Morphogen</title>
         <style type="text/css">
-            body {
-                background: black;
-                padding: 0;
-                margin: 0;
-            }
+            body { margin: 0; }
             #canvas {
                 display: block;
                 background: black;
