--- a/index.html
+++ b/index.html
@@ -1,22 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <meta charset="utf-8">
         <title>Morphogen</title>
-        <style type="text/css">
-            body { margin: 0; }
-            #canvas {
-                display: block;
-                background: black;
-                margin: 0;
-                padding: 0;
-                height: 100vh;
-                width: 100vw;
-            }
-        </style>
+        <meta charset="utf-8">
     </head>
-    <body>
-        <canvas id="canvas"></canvas>
+    <body style="margin: 0; background: black;">
+        <canvas id="canvas" style="display: block; height: 100vh; width: 100vw;"></canvas>
         <script>
             var parameters = {
                 particleLimit: 256, // Keep this in sync with particleLimit in vertex shader!
